feat(user): get user by id interface
